--- a/tests/Drey.Server.Tests/packages.config
+++ b/tests/Drey.Server.Tests/packages.config
@@ -3,6 +3,7 @@
   <package id="CsQuery" version="1.3.3" targetFramework="net451" />
   <package id="FakeItEasy" version="1.25.3" targetFramework="net451" />
   <package id="Microsoft.AspNet.SignalR.Core" version="2.2.0" targetFramework="net451" />
+  <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net452" />
   <package id="Microsoft.Owin" version="3.0.1" targetFramework="net451" />
   <package id="Microsoft.Owin.Hosting" version="3.0.1" targetFramework="net451" />
   <package id="Microsoft.Owin.Security" version="3.0.1" targetFramework="net451" />
