--- a/source/Drey.Runtime/App.config
+++ b/source/Drey.Runtime/App.config
@@ -1,12 +1,20 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <appSettings>
-    <clear/>
-    <add key="WorkingDirectory" value="~/"/>
-    <add key="drey.configuration.consoleport" value="8080"/>
-    <add key="server.sslthumbprint" value="49E36DFA0583739725FEA1C22AB5A0FBA7B39756"/>
+    <clear />
+    <add key="WorkingDirectory" value="~/" />
+    <add key="drey.configuration.consoleport" value="8080" />
+    <add key="server.sslthumbprint" value="49E36DFA0583739725FEA1C22AB5A0FBA7B39756" />
   </appSettings>
   <startup>
-    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2"/>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
   </startup>
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="Topshelf" publicKeyToken="b800c4cfcdeea87b" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-3.3.154.0" newVersion="3.3.154.0" />
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
 </configuration>
