--- a/source/Drey/packages.config
+++ b/source/Drey/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="LibLog" version="4.2.3" targetFramework="net451" developmentDependency="true" />
+  <package id="Topshelf" version="3.3.1" targetFramework="net452" />
 </packages>
